Proper order of import clauses

--- a/examples/README
+++ b/examples/README
@@ -1,1 +1,1 @@
-This dir contains examples that work directly with an brand new installation of FortiGate
+This dir contains examples that work straightforward in a brand new installation of FortiGate
